--- a/css/main.css
+++ b/css/main.css
@@ -420,6 +420,11 @@ template {
 :root {
   font-size: 16px; }
 
+html {
+  min-height: 100%;
+  min-width: 100%;
+  background-color: #EDEDED; }
+
 /*border box model*/
 *, *:before, *:after {
   box-sizing: border-box; }
@@ -430,7 +435,6 @@ body {
   color: #000;
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
-  background-color: #EDEDED;
   max-width: 1200px; }
 
 h1, h2, h3, h4, p, ul {
@@ -559,12 +563,14 @@ a:hover {
         margin-left: 40px; } }
     @media (min-width: 600px) {
       .grid--prototype {
-        grid-template-columns: minmax(auto, 220px) 352px;
-        grid-template-rows: max-content max-content 1fr; } }
+        grid-template-columns: 1fr 352px;
+        grid-template-rows: max-content max-content 1fr;
+        margin-right: 40px; } }
     @media (min-width: 760px) {
       .grid--prototype {
-        grid-template-columns: minmax(auto, 220px) 352px minmax(auto, 220px);
-        grid-template-rows: auto auto; } }
+        grid-template-columns: 1fr 352px 1fr;
+        grid-template-rows: auto auto;
+        max-width: 840px; } }
     @media (min-width: 900px) {
       .grid--prototype {
         margin-top: 54px;
